# cellenium-lite

./: .dockerignore  .env  .gitignore  DEVELOPMENT_ROADMAP.md  Dockerfile  LICENSE  QUICK_START.md  README.md  SERVER_USAGE_GUIDE.md  START_SERVER.bat  bini_code.py  compose.yaml  config.ini  docker-compose.yaml  env_template.env  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run_server.py  settings.py  setup_server.py
ai/: generate_ai_documentation.py
allure-results/: 014d9364-b506-4acd-b2db-31f070df5a67-result.json  0f86c110-6bf0-47e5-bdd0-3a0d73a8a941-container.json  1715c17d-0cf2-443d-997a-a61009c052ba-container.json  3198e601-e195-41b5-803d-bd8f7b7f32de-result.json  4e2cfc03-76b0-4072-b1cb-9ceb04600fe2-result.json  58e9e8cd-04e8-4b81-b6e6-67572116ee5d-result.json  5cfccdcd-e24b-4ea3-a975-edbce6d85030-result.json  6983bd29-092c-468e-b56f-9f3ac6f85b95-result.json  842a9d9f-879f-495b-b301-81fa6d55edc9-container.json  983c71bb-5a3c-4e88-8891-38f782df4998-result.json  ada05562-9166-41e9-b6df-55229761df4f-attachment.txt  bf6c594e-c3e8-4d3c-8bcf-1cd853101cf0-container.json  d7db3d60-54f3-4bb8-ad01-1d2c87c6a381-result.json  db1b8009-0125-499b-bc41-8c9f66fdd023-attachment.txt  dffa7787-060f-4bcf-9f07-9ea42d3f2af9-attachment.txt
allure-results/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
bini/: .env  .gitignore  README.rst  __init__.py  ai_utils.py  app.py  bini_engine.py  data.py  env_template.env
bini_ai/: .gitignore  README.md  __init__.py
core/: .env  Dockerfile  __init__.py
environment/: generateDockerComposeBuild.ps1  init_credentials.sh
infrastructure/: codegen.py  elements.csv  generated_test_code.py  page_base.csv  ~
tests/: Dockerfile  __init__.py  lab.py  main.py  test_desktop_integration.py  tests_count.xlsx
(+254 files in other folders)
