[project]
name = "cellenium-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "mcp",
    "crewai",
    "google",
    "google-api-core",
    "google-auth",
    "pytest",
    "python-dotenv",
    "selenium",
    "webdriver-manager",
    "requests",
    "playwright",
    "pydantic",
    "pydantic-settings",
    "logfire",
    "langchain-openai>=0.3.35",
    "gspread>=6.2.1",
]
